argocd/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/main-gateway
  http:
  - match:
    - uri:
        prefix: /argocd
    rewrite:
      uri: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: monitor
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/main-gateway
  http:
  - match:
    - uri:
        prefix: /prometheus
    rewrite:
      uri: /
    route:
    - destination:
        host: prometheus.monitor.svc.cluster.local
        port:
          number: 9090
